--- a/170516/Views/Product/ViewProductDetail.cshtml
+++ b/170516/Views/Product/ViewProductDetail.cshtml
@@ -72,10 +72,10 @@
                                 </form>
                             </div>
                             <div class="light-gray-bg p-20 bordered clearfix">
-                                <span class="product price"><i class="fa fa-tag pr-10"></i>@Model.DiscountedPrice.ToString("N") đ</span>
+                                <span class="product price"><i class="fa fa-tag pr-10"></i>@Model.DiscountedPrice.ToString("N0") đ</span>
                                 @if (Model.Discount > 0)
                                 {
-                                    <span class="product price" style="margin-left: 5px;color: #7f8c8d;font-size: 15px;"><del>@Model.Price.ToString("N") đ</del></span>
+                                    <span class="product price" style="margin-left: 5px;color: #7f8c8d;font-size: 15px;"><del>@Model.Price.ToString("N0") đ</del></span>
                                 }
                                 <div class="product elements-list pull-right clearfix">
                                     <button id="addToCartBtn" class="btn btn-default btn-animated add-to-cart"><i class="fa fa-cart-plus"></i> Thêm vào giỏ hàng</button>
