--- a/170516/Views/Home/Contact.cshtml
+++ b/170516/Views/Home/Contact.cshtml
@@ -42,21 +42,25 @@
                             <div class="form-group has-feedback">
                                 <label for="name">Họ và Tên *</label>
                                 <input type="text" class="form-control" id="name" name="name" placeholder="">
+                                <span class="field-validation-error"></span>
                                 <i class="fa fa-user form-control-feedback"></i>
                             </div>
                             <div class="form-group has-feedback">
                                 <label for="email">Địa Chỉ Email *</label>
                                 <input type="email" class="form-control" id="email" name="email" placeholder="">
+                                <span class="field-validation-error"></span>
                                 <i class="fa fa-envelope form-control-feedback"></i>
                             </div>
                             <div class="form-group has-feedback">
                                 <label for="subject">Tiêu Đề *</label>
                                 <input type="text" class="form-control" id="subject" name="subject" placeholder="">
+                                <span class="field-validation-error"></span>
                                 <i class="fa fa-navicon form-control-feedback"></i>
                             </div>
                             <div class="form-group has-feedback">
                                 <label for="message">Nội Dung *</label>
                                 <textarea class="form-control" rows="6" id="message" name="message" placeholder=""></textarea>
+                                <span class="field-validation-error"></span>
                                 <i class="fa fa-pencil form-control-feedback"></i>
                             </div>
                             <input type="button" id="SendRequestBtn" value="Gửi Yêu Cầu" class="submit-button btn btn-default">
@@ -97,14 +101,16 @@
 {
     <script>
         $(document).ready(function () {
+            $('.banner').colourBrightness();
+
             // focus on the full name input
             $('#FullName').focus();
 
             $('#SendRequestBtn').on('click', function () {
                 var isValid = true;
-                var $name = $('#FullName'),
-                    $email = $('#EmailAddress'),
-                    $content = $('#Content');
+                var $name = $('#name'),
+                    $email = $('#email'),
+                    $content = $('#message');
 
                 // validate
                 if ($name.val() == null || $name.val() == undefined || $name.val().trim() == "") {
@@ -143,9 +149,6 @@
                         url: staticUrl.SendRequestContact,
                         method: "POST",
                         data: requestContactModel,
-                        beforeSend: function () {
-                            // add loading
-                        },
                         success: function (data) {
                             if (data != null) {
                                 if (data.isValid) {
