--- a/170516/Views/Product/_PartialCart.cshtml
+++ b/170516/Views/Product/_PartialCart.cshtml
@@ -36,7 +36,7 @@
 }
 else
 {
-    <div class="clearfix empty-cart-box" style="background: #dddddd;">
+    <div class="clearfix empty-cart-box" style="background: #f2f2f2;">
         <p style="color: #911808;padding-left: 13px;font-size: 15px;font-weight: 700; padding-top: 10px;">Chưa có sản phẩm nào trong giỏ hàng.</p>
     </div>
 }
